[gd_scene load_steps=5 format=3 uid="uid://dl0cus0n53m6f"]

[ext_resource type="Texture2D" uid="uid://c7oejspbj3ffp" path="res://Features/Cards/cardwbubble.png" id="1_7md3c"]
[ext_resource type="Script" path="res://Gameplay/card_select.gd" id="1_hc6uu"]
[ext_resource type="Texture2D" uid="uid://tb5ggwnjebbq" path="res://Features/Encounter/background_plain.png" id="2_yxenq"]

[sub_resource type="SystemFont" id="SystemFont_pp7me"]
font_names = PackedStringArray("Monospace")

[node name="CardSelectScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hc6uu")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="Sprite2D" parent="BoxContainer"]
position = Vector2(576, 324)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_yxenq")

[node name="Card1" type="Button" parent="BoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
icon = ExtResource("1_7md3c")
flat = true

[node name="Card2" type="Button" parent="BoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
icon = ExtResource("1_7md3c")
flat = true

[node name="Card3" type="Button" parent="BoxContainer"]
layout_mode = 2
size_flags_vertical = 4
icon = ExtResource("1_7md3c")
flat = true

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 364.0
offset_top = 573.0
offset_right = 801.0
offset_bottom = 670.0
theme_override_colors/font_color = Color(0.454808, 0.215523, 0.135926, 1)
theme_override_fonts/font = SubResource("SystemFont_pp7me")
theme_override_font_sizes/font_size = 56
text = "Choose a Card
"

[connection signal="pressed" from="BoxContainer/Card1" to="." method="_on_card_1_pressed"]
[connection signal="pressed" from="BoxContainer/Card2" to="." method="_on_card_2_pressed"]
[connection signal="pressed" from="BoxContainer/Card3" to="." method="_on_card_3_pressed"]
