extends Control


func _on_card_1_pressed() -> void:
	get_tree().change_scene_to_file("res://Features/Encounter/encounter.tscn")

func _on_card_2_pressed() -> void:
	get_tree().change_scene_to_file("res://Features/Encounter/encounter.tscn")

func _on_card_3_pressed() -> void:
	get_tree().change_scene_to_file("res://Features/Encounter/encounter.tscn")
